@@ -35,9 +35,9 @@
                 </thead>
                 <tbody>
                     <tr tal:repeat="row python: result[1]">
-                        <td tal:repeat="item row"
-                            span tal:content="item" 
-                        />
+                        <td tal:repeat="item row">
+                            <span tal:replace="item" />&nbsp;
+                        </td>
                     </tr>
                 </tbody>
             </table>
